# Industrial_bot

./: README.md
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery_pub.cpp  battery_sub.cpp  cpu_pub.cpp  cpu_sub.cpp  hardware_status_publisher.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  battery_monitor.py  cpu_monitor.py  health_manager.py  led_panel.py  my_first_node.py  robot_news_station.py  smartphone.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/urdf/: my_robot.urdf
src/my_robot_interfaces/: package.xml
src/my_robot_interfaces/srv/: SetLed.srv
src/yaml_comm_pkg/: CMakeLists.txt  package.xml
src/yaml_comm_pkg/src/: yaml_publisher.cpp  yaml_subscriber.cpp
