<?xml version="1.0"?>
<package format="3">
  <name>my_cpp_pkg</name>
  <version>0.0.0</version>
  <description>System health monitoring nodes</description>

  <maintainer email="harshit20033@gmail.com">Harshit Sharma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>my_robot_interfaces</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
